--- a/css/wineshop.css
+++ b/css/wineshop.css
@@ -196,7 +196,7 @@ h5 {
     padding: 0vw 25vw;
 }
 
-.allwines_filter, .white_filter, .red_filter, .rose_filter {
+.allwines_filter, .white_filter, .red_filter, .rose_filter, .filterli, .filterli {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -208,8 +208,24 @@ h5 {
     text-align: center;
 }
 
-.white_filter, .red_filter, .rose_filter {
+.white_filter, .red_filter, .rose_filter, .filterli {
     border-left: solid 0.1vw var(--color-8);
+    text-transform: uppercase;
+}
+
+.filterli:first-of-type {
+    border: none;
+}
+
+
+.filterli a {
+    text-decoration: none;
+    font-size: 1.3vw;
+}
+
+.filterli a:visited {
+    text-decoration: none;
+
 }
 
 .filternav a {
